<resources>
    <string name="app_name">Tanya Soal</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ganti_pass">Ganti Password</string>
    <string name="banner_login">DAFTAR DAN NIKMATI\nFree Trial (48 jam)\nLAYANAN TANYA TUTOR </string>

    <!--daftar-->
    <string name="demail">Alamat Email</string>
    <string name="sec_question">Security Question (Apabila Lupa Password)</string>
    <string name="nama_lkp">Nama Lengkap</string>
    <string name="no_hp">No Handphone</string>
    <string name="tgl_lahir">Tgl Lahir</string>

    <string name="namatampil">Nama Tampilan</string>
    <string name="konfirm_password">Konfirmasi Password</string>
    <string name="jns_akademik">Jenis Akademik</string>
    <string name="tkt_akad">Tingkat Akademik</string>
    <string name="sekolah">Sekolah</string>
    <string name="kd_promo">Kode Promo</string>

    <!--HomePage User-->
    <string name="abc">ABC</string>
    <string name="welcome_dummy">Selamat Datang, ABC</string>
    <string name="welcome_dummy2">Saldo Anda: Rp 0\nLangganan Layanan 12 JAM FOTO berlaku s/d 30 DES 2016</string>
    <string name="welcome_dummy3">Lihat catatan penggunaan</string>
    <string name="isi_saldo">Isi Saldo</string>
    <string name="paket_sedia">Paket tersedia</string>

    <string name="tap_exit">Press back again to exit</string>

    <string name="hint_tanya_box"><i>Tanya soal anda disini\n(Cantumkan nomor soal yang ditanya)</i></string>
    <string name="jml_soal_ditanya">Jumlah soal yang ditanyakan: </string>
    <string name="pilih_subjek">Pilih Subjek</string>
    <string name="jawab_dengan">Jawab dengan:</string>

    <!--action-->
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="forgot_pwd">Lupa Password</string>
    <string name="lupa_sandi">Lupa Kata Sandi</string>
    <string name="pass_baru">Password Baru</string>
    <string name="ketik_ulang_pass">Ketik ulang Password</string>
    <string name="tanya_tutor">Tanya Tutor</string>
    <string name="komunitas">Komunitas</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="kirim">Kirim</string>
    <string name="batal">Batal</string>
    <string name="aktifkan">Aktifkan</string>

    <string name="fre_forum">Free Forum</string>
    <string name="artikel">Artikel</string>
    <string name="video">Video</string>
    <string name="soal_menarik">Soal Menarik</string>
    <string name="xxx">\'?????</string>
    <string name="lainnya">Lainnya</string>

    <string name="voucher">Voucher</string>
    <string name="alfamart">Alfamart</string>
    <string name="transfer_atm">Transfer ATM</string>
    <string name="inet_banking">Internet Banking</string>
    <string name="kartu_kredit">Kartu Kredit</string>
    <string name="aktif_kd_voucher">Aktifkan kode voucher</string>
    <string name="digit_kd_24"><i>(24 digit kode)</i></string>
    <string name="ubah_simpan">Ubah &amp; Simpan</string>
    <string name="kembali">Kembali</string>

    <string name="avail_question">Available Question</string>
    <string name="subjek">Subjek</string>
    <string name="level">Level</string>
    <string name="nama">Nama</string>
    <string name="tutor">Tutor</string>
    <string name="sisa_waktu">Sisa Waktu</string>
    <string name="soal">Soal</string>
    <string name="periode">Periode</string>
    <string name="jawaban">Jawaban</string>

    <string name="cat_aktivitas"><b><i>Catatan Aktivitas</i></b></string>
    <string name="tgl_penggunaan">Tanggal penggunaan</string>
    <string name="aksi">Aksi</string>
    <string name="saldo_terpotong">Saldo Terpotong</string>

    <string name="jawab_oleh">dijawab oleh</string>

    <string name="jawab_sini"><i>Jawab sini</i></string>
    <string name="tanya_soal_baru">Tanya Soal baru</string>

    <string name="dummy_jawab_dengan">(Jawab dengan Foto - 3 Jam)</string>
    <string name="dummy_sma3"><i>ABC, SMA 3, 12 jam yang lalu</i></string>
    <string name="edit">Edit</string>
    <string name="ketik_sini"><i>Ketik sini</i></string>

    <string name="berikut_jawab">Berikut jawabannya</string>
    <string name="xyz_6jam_lalu"><i>XYZ - Tutor, 6 jam yang lalu</i></string>
    <string name="choose_file">Choose file</string>
    <string name="selesai_jwb_soal">Selesai menjawab soal</string>
    <string name="jumlah_soal_jawab">Jumlah soal yang dijawab: </string>

    <string name="jml_soal_ditanya_pengguna">Jumlah soal yang ditanya pengguna: </string>
    <string name="jml_soal_sudah_dijawab">Jumlah soal yang sudah dijawab: </string>
    <string name="soal_tersisa">Soal masih tersisa</string>
    <string name="book">Book</string>
    <string name="pass">Pass</string>

    <!--subjek-->
    <string name="matematika">Matematika</string>
    <string name="fisika">Fisika</string>
    <string name="kimia">Kimia</string>
    <string name="biologi">Biologi</string>
    <string name="bhs_inggris">B. Inggris</string>

    <string name="foto">Foto</string>
    <string name="jam_12">12 Jam</string>
    <string name="jam_3">3 Jam</string>
    <string name="hari_5"><b>5 Hari</b></string>
    <string name="hari_30"><b>30 Hari</b></string>
    <string name="harga_40k"><b><i>Harga: Rp 40.000,-</i></b></string>
    <string name="total_20"><i>Total: <b>20 Soal</b> (10 soal/hari)</i></string>
    <string name="harga_200k">Harga: Rp 200.000,-</string>
    <string name="harga_4k_soal"><b><i>Harga: Rp4.000 per soal</i></b></string>
    <string name="harga_6k_soal"><b><i>Harga: Rp6.000 per soal</i></b></string>
    <string name="isi_saldo_lgs">Isi saldo dan langsung aktif</string>

    <string name="foto_12jam">Foto (12 jam)</string>
    <string name="foto_3jam_4k">Foto (3 jam)-Rp4.000/soal</string>
    <string name="video_12jam_6k">Video (12 jam)-Rp6.000/soal</string>

    <string name="jml_soal_hr_ini">Jumlah soal yang telah dipakai hari ini</string>
    <string name="jml_soal_bln_ini">Jumlah soal yang telah dipakai bulan ini</string>

    <string name="settings_file">account</string>
    <string name="settings_account_id">account_id</string>
    <string name="settings_account_username">account_username</string>
    <string name="settings_account_access_token">access_token</string>

    <string name="error_signin">Incorrect username or password</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="error_field_empty">Required fields are empty</string>
    <string name="error_wrong_format">Wrong format</string>
    <string name="error_min_6_char">Minimum 6 characters</string>
    <string name="error_min_5_char">Minimum 5 characters</string>
    <string name="error_min_2_char">Minimum 2 characters</string>
    <string name="error_login_taken">Username is already taken</string>
    <string name="error_email_taken">User with this mail is already registered</string>
    <string name="error_password">Invalid password.</string>
    <string name="error_password_match">Password not match</string>
    <string name="error_email">Email invalid.</string>
    <string name="error_phone">Error phone number</string>

    <string name="success_profile_edit">Data Anda sudah tersimpan</string>

    <string name="failed_profile_edit">Data Anda gagal tersimpan</string>

    <string-array name="jns_akademik_array">
        <item>International</item>
        <item>National</item>
        <item>Others</item>
    </string-array>

    <string-array name="action_forum">
        <item>Share</item>
        <item>Report abuse</item>
    </string-array>

    <string-array name="tkt_akademik_array">
        <item>1 SD</item>
        <item>2 SD</item>
        <item>3 SD</item>
        <item>4 SD</item>
        <item>5 SD</item>
        <item>6 SD</item>
        <item>7 SMP</item>
        <item>8 SMP</item>
        <item>9 SMP</item>
        <item>12 SMA</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="navDrawerItems2">
        <item>Home</item>
        <item>Layanan Kami</item>
        <item>Syllabus</item>
        <item>FAQ</item>
        <item>Tentang Kami</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="subjekItems">
        <item>Matematika</item>
        <item>Fisika</item>
        <item>Kimia</item>
        <item>Biologi</item>
        <item>B. Inggris</item>
    </string-array>

    <string-array name="navDrawerItems">
        <item>Home</item>
        <item>Layanan Kami</item>
        <item>Syllabus</item>
        <item>FAQ</item>
        <item>Tentang Kami</item>
    </string-array>


</resources>
