<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_login"
    xmlns:android="http://schemas.android.com/apk/res/android">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_tanya_tutor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.rp.holliday.nb.example.rp.holliday.TanyaTutorActivity"
                >

                <custom_font.EditTextMyriad
                    android:id="@+id/input_soal"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="@dimen/margin_left_right_30"
                    android:layout_marginLeft="@dimen/margin_left_right_30"
                    android:background="@drawable/white_box_stroke"
                    android:hint="@string/hint_tanya_box"
                    android:textColorHint="@color/txt_hint_login"
                    android:padding="10dp"
                    android:textSize="13sp"
                    android:gravity="start"/>

                <LinearLayout
                    android:id="@+id/root_jml_soal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_soal"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="@dimen/margin_left_right_30"
                    android:layout_marginLeft="@dimen/margin_left_right_30"
                    android:orientation="horizontal">

                    <custom_font.TextViewMyriad
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:text="@string/jml_soal_ditanya"
                        android:gravity="center_vertical"/>

                    <custom_font.EditTextMyriad
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:background="@drawable/white_box_grey_stroke"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/root2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/root_jml_soal"
                    android:layout_marginRight="@dimen/margin_left_right_30"
                    android:layout_marginLeft="@dimen/margin_left_right_30"
                    android:layout_marginTop="10dp">

                    <custom_font.TextViewMyriad
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/camera"
                        android:gravity="center"
                        android:padding="10dp"
                        android:background="@drawable/grey_box_stroke"/>

                    <custom_font.TextViewMyriad
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/gallery"
                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/grey_box_stroke"/>

                </LinearLayout>

                <custom_font.TextViewMyriad
                    android:id="@+id/judul_pil_subjek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_left_right_30"
                    android:layout_marginLeft="@dimen/margin_left_right_30"
                    android:layout_marginTop="10dp"
                    android:text="@string/pilih_subjek"
                    android:layout_below="@id/root2"/>

                <org.apmem.tools.layouts.FlowLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/judul_pil_subjek"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_alignRight="@+id/root2"
                    android:layout_alignEnd="@+id/root2"
                    android:id="@+id/root3">

                    <custom_font.TextViewMyriad
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/matematika"
                        android:textColor="@android:color/white"
                        android:background="#337abd"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:padding="10dp"
                        />

                    <custom_font.TextViewMyriad
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fisika"
                        android:textColor="@android:color/white"
                        android:background="#00afef"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:padding="10dp"/>

                    <custom_font.TextViewMyriad
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/kimia"
                        android:background="#00afef"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:padding="10dp"/>

                    <custom_font.TextViewMyriad
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/biologi"
                        android:textColor="@android:color/white"
                        android:background="#00afef"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:padding="10dp"/>

                    <custom_font.TextViewMyriad
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="#00afef"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:text="@string/bhs_inggris"/>

                </org.apmem.tools.layouts.FlowLayout>

                <custom_font.TextViewMyriad
                    android:id="@+id/judul_jwb_dengan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/root3"
                    android:text="@string/jawab_dengan"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="@dimen/margin_left_right_30"
                    android:layout_marginStart="@dimen/margin_left_right_30"/>

                <org.apmem.tools.layouts.FlowLayout
                    android:layout_width="match_parent"
                    android:id="@+id/root4"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/judul_jwb_dengan"
                    android:layout_alignLeft="@+id/judul_jwb_dengan"
                    android:layout_alignStart="@+id/judul_jwb_dengan" >

                    <custom_font.TextViewMyriad
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:text="@string/foto_12jam"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="#337abd"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@android:color/white"/>

                    <custom_font.TextViewMyriad
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:textColor="@android:color/white"
                        android:background="#00afef"
                        android:text="@string/foto_3jam_4k"
                        android:gravity="center"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:padding="10dp"/>

                    <custom_font.TextViewMyriad
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:padding="10dp"
                        android:background="#00afef"
                        android:text="@string/video_12jam_6k"
                        android:textColor="@android:color/white"
                        android:gravity="center"/>
                </org.apmem.tools.layouts.FlowLayout>

                <custom_font.TextViewMyriad
                    android:id="@+id/judul_jml_soal_hari"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/jml_soal_hr_ini"
                    android:layout_below="@+id/root4"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="@dimen/margin_left_right_30"
                    android:layout_marginStart="@dimen/margin_left_right_30" />

                <custom_font.TextViewMyriad
                    android:id="@+id/judul_jml_soal_bln"
                    android:layout_below="@id/judul_jml_soal_hari"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_left_right_30"
                    android:layout_marginStart="@dimen/margin_left_right_30"
                    android:text="@string/jml_soal_bln_ini"
                    android:gravity="center_vertical"/>

                <custom_font.TextViewMyriad
                    android:id="@+id/jml_soal_bln_ini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="40 soal"
                    android:layout_above="@+id/root7"
                    android:layout_alignRight="@+id/root3"
                    android:layout_alignEnd="@+id/root3" />

                <custom_font.TextViewMyriad
                    android:id="@+id/jml_soal_hari_ini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10 soal"
                    android:layout_below="@+id/root4"
                    android:layout_marginTop="20dp"
                    android:layout_alignLeft="@+id/jml_soal_bln_ini"
                    android:layout_alignStart="@+id/jml_soal_bln_ini" />

                <LinearLayout
                    android:id="@+id/root7"
                    android:layout_below="@id/judul_jml_soal_bln"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">

                    <custom_font.TextViewMyriad
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kirim"
                        android:padding="8dp"
                        android:background="@color/prim_red"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="@dimen/margin_left_right_30"
                        android:layout_marginLeft="@dimen/margin_left_right_30"
                        android:textColor="@android:color/white"/>

                    <custom_font.TextViewMyriad
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/batal"
                        android:textColor="@android:color/white"
                        android:padding="8dp"
                        android:background="#58585a"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="@dimen/margin_left_right_30"
                        android:layout_marginLeft="@dimen/margin_left_right_30"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>
